; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_tty.c_tty_canon_size.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_tty.c_tty_canon_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.tty*)* @tty_canon_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @tty_canon_size(%struct.tty* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.tty*, align 8
  %4 = alloca i32*, align 8
  store %struct.tty* %0, %struct.tty** %3, align 8
  %5 = load %struct.tty*, %struct.tty** %3, align 8
  %6 = getelementptr inbounds %struct.tty, %struct.tty* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = load %struct.tty*, %struct.tty** %3, align 8
  %9 = getelementptr inbounds %struct.tty, %struct.tty* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  %11 = call i32* @memchr(i32* %7, i32 1, i32 %10)
  store i32* %11, i32** %4, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %1
  store i64 -1, i64* %2, align 8
  br label %25

15:                                               ; preds = %1
  %16 = load i32*, i32** %4, align 8
  %17 = load %struct.tty*, %struct.tty** %3, align 8
  %18 = getelementptr inbounds %struct.tty, %struct.tty* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = ptrtoint i32* %16 to i64
  %21 = ptrtoint i32* %19 to i64
  %22 = sub i64 %20, %21
  %23 = sdiv exact i64 %22, 4
  %24 = add nsw i64 %23, 1
  store i64 %24, i64* %2, align 8
  br label %25

25:                                               ; preds = %15, %14
  %26 = load i64, i64* %2, align 8
  ret i64 %26
}

declare dso_local i32* @memchr(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
